css/styles.css
/* ... */
.big-logo > line {
  stroke-dasharray: 1200px;
  stroke-dashoffset: 0;
  transition: stroke-dashoffset 3s linear;
}
.big-logo > polyline {
  stroke-dasharray: 2000px;
  stroke-dashoffset: 0;
  transition: stroke-dashoffset 2s linear;
}
.big-logo:hover > line {
  stroke-dashoffset: 100rem;
}
.big-logo:hover > polyline {
  stroke-dashoffset: 2000px;
}

@media only screen and (max-width: 640px) {
  .big-logo {
    display: none;
  }
}
.black-logo path {
  fill: black;
}
.black-logo > * {
  stroke: black;
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@font-face {
  font-family: "AHAMONO";
  src: url("../assets/fonts/AHAMONO-Regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/AHAMONO-Regular.otf") format("opentype"), url("../assets/fonts/AHAMONO-Regular.woff") format("woff"), url("../assets/fonts/AHAMONO-Regular.ttf") format("/truetype"), url("../assets/fonts/AHAMONO-Regular.svg#AHAMONO-Regular") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
html {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*,
*::after,
*::before {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

body {
  background-color: #ffffff;
  font-family: "AHAMONO";
  font-size: 1.2rem;
  max-width: 1200px !important;
  height: 100vh;
}

ul {
  list-style: none;
}

.people .people-group .textblock .card-actions button,
.people .people-group .textblock .card-actions a, .projects .textblock .card-actions a, .papers .textblock .window__paper a, .classes .textblock span, .classes .textblock a {
  margin: 0.4rem;
  display: inline-block;
  border: 2px solid #000;
  text-decoration: none;
  padding: 0.5rem;
  font-size: 1rem;
  background-color: white;
  color: black;
  transition: all 0.2s linear;
}
.people .people-group .textblock .card-actions button:hover,
.people .people-group .textblock .card-actions a:hover, .projects .textblock .card-actions a:hover, .papers .textblock .window__paper a:hover, .classes .textblock span:hover, .classes .textblock a:hover {
  color: white;
  background-color: black;
}

/* Mobile Styles Start */
@media only screen and (max-width: 640px) {
  body {
    padding-bottom: 7rem;
    height: 100%;
  }
  body header h1 {
    margin: 3rem 1rem;
  }
  body header nav ul {
    display: flex;
    justify-content: space-around;
    margin: 0;
    position: fixed;
    bottom: 0;
    z-index: 9999;
    width: 100vw;
  }
  body header nav ul li a {
    font-size: 1rem;
    display: flex;
    flex-direction: column-reverse;
  }
  body header nav ul li a i {
    font-size: 2rem;
  }
  body header nav ul li .current-page {
    text-decoration: none;
  }
  body header nav ul .btn-group > a.btn {
    font-size: 1rem;
  }
  body header nav ul .btn-group > .dropdown-toggle span {
    color: black;
  }
  body main {
    margin: 0 1.2rem 2rem;
  }
  body main .logo, body main #logo3 {
    display: none;
    position: fixed;
    bottom: 6rem;
    width: auto;
    left: 0;
    z-index: -1;
  }
  body .people .textblock {
    flex-grow: 1;
  }
}
/* Mobile Styles End */
/* Desktop Styles Start */
header {
  position: relative;
  z-index: 9999;
}
header h1 {
  font-size: 2rem;
  padding: 5px;
  margin: 3rem 3rem 0;
}
header nav ul {
  margin: 0 3rem 3rem;
  background-color: white;
  display: flex;
  flex-wrap: wrap;
  font-size: 1.5rem;
  justify-content: space-around;
  font-weight: bold;
  border: solid black 2px;
}
header nav ul .btn-group {
  display: inline-flex;
  flex-wrap: nowrap;
  align-items: stretch;
}
header nav ul .btn-group > a.btn {
  font-size: 1.5rem;
  height: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}
header nav ul .btn-group > .dropdown-toggle {
  display: flex;
  align-items: center;
  padding: 0 0.3rem;
}
header nav ul .btn {
  padding: unset;
  transition: none;
}
header nav ul .btn-primary,
header nav ul .btn-primary:hover,
header nav ul .btn-primary:focus,
header nav ul .btn-primary:focus-visible,
header nav ul .btn-primary:active,
header nav ul .btn-primary:active:hover,
header nav ul .btn-primary:active:focus,
header nav ul .btn-primary:focus:hover,
header nav ul .btn-primary.active,
header nav ul .btn-primary.active:hover,
header nav ul .btn-primary.active:focus,
header nav ul .btn-primary.active.focus,
header nav ul .btn-primary:active.focus,
header nav ul .btn-primary.focus,
header nav ul .open > .dropdown-toggle.btn-primary,
header nav ul .open > .dropdown-toggle.btn-primary:focus,
header nav ul .open > .dropdown-toggle.btn-primary:hover,
header nav ul .open > .dropdown-toggle.btn-primary:focus:hover,
header nav ul .open > .dropdown-toggle.btn-primary:active:hover,
header nav ul .open > .dropdown-toggle.btn-primary.focus {
  transition: none;
  border-color: white;
  background-color: white;
  color: black;
  outline: unset;
  box-shadow: unset;
}
header nav ul .btn-primary a {
  font-weight: bold;
}
header nav ul .dropdown-menu a {
  height: auto;
  display: block;
  padding: 0.3rem 1rem;
  font-size: 1.2rem;
}
header nav ul li a {
  transition: all 0.5s;
  color: #717171;
  text-decoration: none;
  font-size: 1.5rem;
  height: 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
header nav ul li a:hover {
  color: black;
  text-decoration: underline;
}
header nav ul li .current-page {
  color: #000 !important;
  text-decoration: underline;
}

main {
  margin: 0 3rem 3rem;
}
main .list_with_padding {
  padding-left: 3rem;
}
main .textblock {
  border: solid 2px black;
  transition: box-shadow 0.2s linear;
  background-color: #ffffff;
  opacity: 0;
  transform: translateY(1rem);
}
main .textblock.visible {
  animation: card-enter 0.4s ease forwards;
}
main .textblock:hover {
  box-shadow: 4px 5px;
}
main .textblock h1 {
  border-bottom: solid 2px black;
  padding: 0.75rem;
}
/* ... */

